# oryn.fi

./: .gitignore  .gitmodules  Readme.md
backend/api/: .gitignore  README.md  package.json
backend/api/src/: coingecko.ts  config.ts  constants.ts  index.ts  nft-service.ts  server.ts
backend/assets/: Dockerfile  README.md  package.json  server.js
blockchain/: README_V4_HOOK.md  foundry.toml  package-lock.json  package.json  remappings.txt
blockchain/script/: V4-uniswap_addLpScript.s.sol  deployCDP_v3.s.sol  deployMockPyth.s.sol  deployOrynMintingHook.s.sol  deployUniswpaCore.s.sol  deployUniswpaCoreAndCDP.s.sol  deploy_tokens.s.sol
blockchain/script/base/: BaseScript.sol  LiquidityHelpers.sol
blockchain/src/: OrynEngine.sol  OrynMintingHook.sol  OrynUSD.sol
blockchain/src/interfaces/: IPyth.sol  IUniPositionManager.sol  IUniswapV3FactoryMinimal.sol  IUniswapV3PoolMinimal.sol  (+1 more)
blockchain/test/: OrynEngineTest.t.sol  OrynEngineTestWithPyth.t.sol
oryn_fi/: .gitignore  Dockerfile  index.html  package.json  vite.config.ts
oryn_fi/src/: App.tsx  index.css  main.tsx
pyth/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
pyth-oracle/: Cargo.toml  settings.example.toml
pyth-oracle/abi/: oracle.json
pyth-oracle/src/: main.rs  settings.rs
pyth/src/: index.ts  main.ts  oracle.ts  price.ts
uniswap-v3/: .env.example  .gitmodules  DEPLOYMENT.md  DEPLOY_COMMANDS.md  foundry.toml
uniswap-v3/script/: DeployUniswapV3.s.sol  DeployUniswapV3Simple.s.sol  LocalDeployment.s.sol  deployUniswpaCore.s.sol  script_toAddliquidity_on_uniswapv3.s.sol
(+99 files in other folders)
