[package]
name = "pyth-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.7", features = ["full", "node-bindings", "eip712"] }
alloy-primitives = { version = "0.8.23", features = ["getrandom"] }
alloy-rpc-types-eth = "1.0.23"
config = "0.15.17"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = {version = "1.0.122", features = ["arbitrary_precision"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }